--- a/wiki/sex.wikitext
+++ b/wiki/sex.wikitext
@@ -89,3 +89,138 @@
 # [[six]]
 
 [[la:Sex]][[sv:Sex]]
+[http://www.6667776.com/01index.htm Home Supplies Stocks]
+[http://www.6667776.com/02index.htm Home Theatre System]
+[http://www.6667776.com/03index.htm Honey Products]
+[http://www.6667776.com/04index.htm Horn]
+[http://www.6667776.com/05index.htm Horse Racing]
+[http://www.6667776.com/06index.htm Hotel Supplies]
+[http://www.6667776.com/07index.htm Household]
+[http://www.6667776.com/08index.htm Household Textile Product]
+[http://www.6667776.com/09index.htm Humidifier]
+[http://www.6667776.com/10index.htm Hydraulic Pressure Tools]
+[http://www.6667776.com/11index.htm Hydrin]
+[http://www.6667776.com/12index.htm IC Card]
+[http://www.6667776.com/13index.htm Incandescent Bulbs]
+[http://www.6667776.com/14index.htm Incense]
+[http://www.6667776.com/15index.htm Incensory]
+[http://www.6667776.com/16index.htm Induction Cooker]
+[http://www.6667776.com/17index.htm Inductor]
+[http://www.6667776.com/18index.htm Industrial]
+[http://www.6667776.com/19index.htm Industrial Fabrics]
+[http://www.6667776.com/20index.htm Industrial Lighting]
+[http://www.6667776.com/21index.htm Industrial Materials]
+[http://www.6667776.com/22index.htm Industrial Power Supply]
+[http://www.6667776.com/23index.htm Industrial Supplies]
+[http://www.6667776.com/24index.htm Industrial Supplies Stocks]
+[http://www.6667776.com/25index.htm Industrial Washing Machine] 
+http://www.6667776.com/index.htm
+http://www.6667776.com/products.htm
+http://www.6667776.com/tuijian.htm
+http://www.6667776.com/zhuyao.htm
+http://www.6667776.com/shiyong.htm
+http://www.6667776.com/jianjie.htm
+http://www.6667776.com/rongyu.htm
+http://www.6667776.com/lianxi.htm 
+[http://www.8883335.com/01index.htm Handkerchief]
+[http://www.8883335.com/02index.htm Handles]
+[http://www.8883335.com/03index.htm Hardware]
+[http://www.8883335.com/04index.htm Hardware Components]
+[http://www.8883335.com/05index.htm Hazardous Goods Packaging]
+[http://www.8883335.com/06index.htm Health]
+[http://www.8883335.com/07index.htm Health Care Products]
+[http://www.8883335.com/08index.htm Health Food]
+[http://www.8883335.com/09index.htm Health Products]
+[http://www.8883335.com/10index.htm Heat Exchange]
+[http://www.8883335.com/11index.htm Heat Insulation]
+[http://www.8883335.com/12index.htm Heaters]
+[http://www.8883335.com/13index.htm Heating]
+[http://www.8883335.com/14index.htm Herb Medicine]
+[http://www.8883335.com/15index.htm Herbicides]
+[http://www.8883335.com/16index.htm Herbs]
+[http://www.8883335.com/17index.htm HID Bulbs]
+[http://www.8883335.com/18index.htm High Polymers]
+[http://www.8883335.com/19index.htm High Precision Bearings]
+[http://www.8883335.com/20index.htm Holders]
+[http://www.8883335.com/21index.htm Holiday Gift]
+[http://www.8883335.com/22index.htm Holiday Lighting]
+[http://www.8883335.com/23index.htm Home Appliances]
+[http://www.8883335.com/24index.htm Home Appliances Agents]
+[http://www.8883335.com/25index.htm Home Appliances Stocks]
+[http://www.8883335.com/26index.htm Home Supplies] 
+http://www.8883335.com/index.htm
+http://www.8883335.com/products.htm
+http://www.8883335.com/tuijian.htm
+http://www.8883335.com/zhuyao.htm
+http://www.8883335.com/shiyong.htm
+http://www.8883335.com/jianjie.htm
+http://www.8883335.com/rongyu.htm
+http://www.8883335.com/lianxi.htm 
+[http://www.8883336.com/01index.htm Gear]
+[http://www.8883336.com/02index.htm Gearbox]
+[http://www.8883336.com/03index.htm Generator]
+[http://www.8883336.com/04index.htm Generators]
+[http://www.8883336.com/05index.htm Gift Packaging]
+[http://www.8883336.com/06index.htm Gifts]
+[http://www.8883336.com/07index.htm Glass]
+[http://www.8883336.com/08index.htm Glass Packaging Materials]
+[http://www.8883336.com/09index.htm Glassware]
+[http://www.8883336.com/10index.htm Glue]
+[http://www.8883336.com/11index.htm Golf]
+[http://www.8883336.com/12index.htm GPS]
+[http://www.8883336.com/13index.htm Granite]
+[http://www.8883336.com/14index.htm Graph Plotter]
+[http://www.8883336.com/15index.htm Graphite]
+[http://www.8883336.com/16index.htm Graphite Products]
+[http://www.8883336.com/17index.htm Gravel]
+[http://www.8883336.com/18index.htm Grey Fabrics]
+[http://www.8883336.com/19index.htm Guest Amenities]
+[http://www.8883336.com/20index.htm Gums]
+[http://www.8883336.com/21index.htm Gymnastics]
+[http://www.8883336.com/22index.htm Hair]
+[http://www.8883336.com/23index.htm Hair Dryer]
+[http://www.8883336.com/24index.htm Halogen Bulbs]
+[http://www.8883336.com/25index.htm Hand Dryer]
+[http://www.8883336.com/26index.htm Hand Tools] 
+http://www.8883336.com/index.htm
+http://www.8883336.com/products.htm
+http://www.8883336.com/tuijian.htm
+http://www.8883336.com/zhuyao.htm
+http://www.8883336.com/shiyong.htm
+http://www.8883336.com/jianjie.htm
+http://www.8883336.com/rongyu.htm
+http://www.8883336.com/lianxi.htm 
+[http://www.8883338.com/01index.htm Forest] 
+[http://www.8883338.com/02index.htm Forest Machinery]
+[http://www.8883338.com/03index.htm Forged]
+[http://www.8883338.com/04index.htm Frames]
+[http://www.8883338.com/05index.htm Freezer]
+[http://www.8883338.com/06index.htm Frozen]
+[http://www.8883338.com/07index.htm Frozen Food]
+[http://www.8883338.com/08index.htm Fuel Cells]
+[http://www.8883338.com/09index.htm Fuel Oil]
+[http://www.8883338.com/10index.htm Funeral]
+[http://www.8883338.com/11index.htm Fungicide]
+[http://www.8883338.com/12index.htm Funicular Cars]
+[http://www.8883338.com/13index.htm Fur Raw Materials]
+[http://www.8883338.com/14index.htm Gambling]
+[http://www.8883338.com/15index.htm Game Controllers]
+[http://www.8883338.com/16index.htm Games]
+[http://www.8883338.com/17index.htm Garden]
+[http://www.8883338.com/18index.htm Garden Gazebo]
+[http://www.8883338.com/19index.htm Garden Ornaments]
+[http://www.8883338.com/20index.htm Garden Supplies]
+[http://www.8883338.com/21index.htm Garden Tools]
+[http://www.8883338.com/22index.htm Gas Cooker]
+[http://www.8883338.com/23index.htm Gas Disposal]
+[http://www.8883338.com/24index.htm Gaskets]
+[http://www.8883338.com/25index.htm Gasoline Powered Tools]
+[http://www.8883338.com/26index.htm Gauging Tools] 
+http://www.8883338.com/index.htm
+http://www.8883338.com/products.htm
+http://www.8883338.com/tuijian.htm
+http://www.8883338.com/zhuyao.htm
+http://www.8883338.com/shiyong.htm
+http://www.8883338.com/jianjie.htm
+http://www.8883338.com/rongyu.htm
+http://www.8883338.com/lianxi.htm
