--- a/wiki/%E3%82%84.wikitext
+++ b/wiki/%E3%82%84.wikitext
@@ -7,3 +7,16 @@ For a list of words starting with this hiragana see: [[Wiktionary:Japanese index
 '''や''' (ya)
 
 # [[矢]]: [[arrow]]
+
+===Particle===
+
+# や: [[and]]
+#*Used to conjoin nouns; implies that the list is not limited to the nouns named.
+#*[[お年寄り]]<u>や</u>[[体]][[の]][[不自由]][[な]][[方]][[は]][[登録]][[する|しません]][[か]]。<br>''O-toshiyori <u>ya</u> karada no fujiyû na kata wa tôroku shimasen ka.''<br>Don't seniors <u>and</u> the physically handicapped ''[and others]'' register?
+#*[[と]], the other particle typically used to conjoin nouns, implies that the list is limited to the stated nouns.
+
+===Verb===
+
+# や: Variation on the Japanese [[copula]] だ ("da"), associated with the [[w:Kansai|Kansai region]] and particularly [[w:Osaka|Osaka]]. The use of や is common in fictional dialogue attributed to characters from Osaka.
+#*[[まあ]]、[[ぼちぼち]]<u>や</u>[[な|なあ]]。<br>''Maa, bochibochi <u>ya</u> naa.''<br>Well, things <u>are</u> slow. ''(A stereotypical Osaka expression)''
+#*[[やん]] is the negative form of や.
