adding "number sign" and alphabetizing <octothorpe#44872>

--- a/wiki/octothorpe.wikitext
+++ b/wiki/octothorpe.wikitext
@@ -15,6 +15,7 @@ Other unsubstantiated stories include:
 
 ====Synonyms====
 *[[hash]]  (''computing; telephony, British'')
-*[[square]] (''telephony, British'')
+*[[number sign]]
 *[[pound sign]] (''telephony, US'')
+*[[square]] (''telephony, British'')
 <!-- Note the sharp sign in music is a different symbol. -->
