--- a/wiki/octothorpe.wikitext
+++ b/wiki/octothorpe.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Alternate forms===
-octothorp
+[[octothorp]]
 
 ===Etymology===
 Coined by a Bell Labs supervisor, Don Macpherson in the early 1960's [http://www.sigtel.com/tel_tech_octothorpe.html],[http://www.word-detective.com/072999.html#octothorpe],[http://www.quinion.com/words/weirdwords/ww-oct1.htm]; ''octo'' for the eight points, and ''thorpe'' after Olympic medalist Jim Thorpe.
