--- a/wiki/ugly.wikitext
+++ b/wiki/ugly.wikitext
@@ -1,12 +1,4 @@
-===Adjective===
-'''ugly''' ([[uglier]], [[ugliest]])
-
-# very unattractive
-# displeasing to the eye
-# not asthetically pleasing
-
-====Antonyms====
-*[[beautiful]], [[gorgeous]]
+Hi Ashlee I just changed this for fun
 
 ====Related terms====
 *[[ugly frog duckling]]
