--- a/wiki/ugly.wikitext
+++ b/wiki/ugly.wikitext
@@ -1,7 +1,7 @@
 Hi Ashlee I just changed this for fun
 
 ====Related terms====
-*[[ugly frog duckling]]
+*[[ugly duckling]]
 
 ====Translations====
 *Chineese: [[難看]], [[难看]]
