--- a/wiki/wooden-top.wikitext
+++ b/wiki/wooden-top.wikitext
@@ -1,1 +1,1 @@
-In the U.K. police, 'Woodentop' is a slang term used by [[CID]] detectives to refer to uniformed police officers.
+In the [[British Police]], 'Woodentop' is a slang term used by [[Criminal Investigation Division]] detectives to refer to uniformed police officers.
