--- a/wiki/NSDAP.wikitext
+++ b/wiki/NSDAP.wikitext
@@ -1,7 +1,6 @@
-==Abbreviation==
+==German==
 
-National Sozialistische Deutsche Arbeiter Partei
+===Abbreviation===
+'''NSDAP'''
 
-* English: National Socialist German Workers Party
-
-The full name of the [[Nazi]] party.
+# National Sozialistische Deutsche Arbeiter Partei (''National Socialist German Workers Party''), the full name of the [[Nazi]] party.
