fmt (I've heard it myself) <flustrated#53344>

--- a/wiki/flustrated.wikitext
+++ b/wiki/flustrated.wikitext
@@ -1,5 +1,9 @@
-the state of being so frustrated that you are flustered
+==English==
 
-or
+===Etymology===
+Blend of [[fluster]]ed and [[frustrate]]d.
 
-the state of being so flustered that you are frustrated
+===Adjective===
+'''flustrated''', '''more flustrated''', '''most flustrated'''
+
+# Frustrated to the point of being flustered, or vice versa.
