--- a/wiki/narrative.wikitext
+++ b/wiki/narrative.wikitext
@@ -12,7 +12,7 @@
 ===Adjective===
 '''narrative'''
 # Telling a story through a medium other than speech.
-# Being overly talkative; garrulous.
+# Being overly talkative; [[garrulous]].
 
 ====Related terms====
 *[[narrate]] n
