rv Ashlee <ugly#41648>

--- a/wiki/ugly.wikitext
+++ b/wiki/ugly.wikitext
@@ -1,7 +1,15 @@
-Hi Ashlee I just changed this for fun
+===Adjective===
+'''ugly''' ([[uglier]], [[ugliest]])
+
+# very unattractive
+# displeasing to the eye
+# not asthetically pleasing
+
+====Antonyms====
+*[[beautiful]], [[gorgeous]]
 
 ====Related terms====
-*[[ugly duckling]]
+*[[ugly frog duckling]]
 
 ====Translations====
 *Chineese: [[難看]], [[难看]]
