--- a/wiki/stupid.wikitext
+++ b/wiki/stupid.wikitext
@@ -3,7 +3,15 @@
 ===Adjective===
 '''stupid'''
 
+# Lacking in [[intelligence]].
+#: ''Vandalizing an adjective by defining a noun is plainly stupid.''
+# To the point of [[stupor]].
+#: ''Wiktionary vandalism bores me stupid.''
+# (''slang, dated'') Extremely.
+#: ''My gear is stupid fly.''
+
 ====Derived terms====
+*[[stupid-ass]]
 *[[stupidity]]
 *[[stupidly]]
 
@@ -18,7 +26,6 @@
 *Japanese: [[馬鹿]] (ばか), [[間抜け]] ([[まぬけ]]), [[馬鹿げた]] ([[ばかげた]]), [[愚か]]な
 *Korean: [[어리석은]]
 *Latin: [[stupidus]] ''m'', [[stupida]] ''f'', [[stupidum]] ''n''
-*Malay: [[bodoh]]
 *Russian: [[глупый]]; [[тупоумный]] ''m'', [[тупоумная]] ''f'', [[тупоумное]] ''n'', [[тупоумные]] ''pl''
 *Spanish: [[estúpido]] ''m'', [[estúpida]] ''f''
 
