fmt, still a fair bit of non-standard and HTML formatting here <と#44785>

--- a/wiki/%E3%81%A8.wikitext
+++ b/wiki/%E3%81%A8.wikitext
@@ -1,9 +1,14 @@
-== [[Japanese]] [[Hiragana]] ==
-'''[[pronunciation]]''' - tó (to)
+== Japanese ==
+=== Pronunciation ===
+tó (to)
+
+=== [[Hiragana]] ===
+'''と'''
 
 For a list of words starting with this hiragana see: [[Wiktionary:Japanese index と]]
 
-== Particle ==
+=== Particle ===
+'''と'''
 
 # "'''and'''" (when between nouns) <br>[[彼女]][[は]][[英語]]<u>と</u>[[フランス語]][[を]][[話す|話せる]]。<br>''Kanojo wa eigo <u>to</u> furansugo o hanaseru.''<br>She can speak English <u>and</u> French.
 #* This sense of と can only be used to conjoin nouns. Verbs and sentences are conjoined by conjugation.
