--- a/wiki/cat.wikitext
+++ b/wiki/cat.wikitext
@@ -44,6 +44,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *[[Romanica]]: [[felino]] ''m'', [[felina]] ''f''
+*[[Spanish]]: [[felino]] ''m'', [[felina]] ''f''
 *Swedish: [[kattdjur]] ''n''
 |}
 |}
