--- a/wiki/cat.wikitext
+++ b/wiki/cat.wikitext
@@ -126,6 +126,8 @@
 '''catfish'''
 ''See [[catfish]]''
 
+'''cat-house'''
+
 '''strong tackle used to hoist an anchor to the cathead of a ship'''
 {| border=0  width=100%
 |-
