/* Related terms */ <cat#36>

--- a/wiki/cat.wikitext
+++ b/wiki/cat.wikitext
@@ -232,6 +232,7 @@ Contraction of '''[[concatenate]]''', from Latin '''[[concatenare]]''', ''chain 
 
 ===Related terms===
 *[[bobcat]]
+*[[cat-house]]
 *[[catty]]
 *[[Cheshire Cat]]
 *[[fat cat]]
