--- a/wiki/serendipity.wikitext
+++ b/wiki/serendipity.wikitext
@@ -1,3 +1,3 @@
 '''Serendipity''' (noun)
 
-The faculty or phenomenon of finding valuable or agreeable things not sought for.
+The faculty or phenomenon of finding valuable or agreeable things not sought for. For example, finding a biological culture "ruined" by mould, and discovering the antibiotic penicillin as a consequence.
