--- a/wiki/addice.wikitext
+++ b/wiki/addice.wikitext
@@ -6,3 +6,322 @@ See [[adze]].
 
 ----
 {{webster}}
+[http://www.0008888.com/jixie008/001.htm 分切机]
+[http://www.0008888.com/jixie008/002.htm 分切机械]
+[http://www.0008888.com/jixie008/003.htm 分散设备]
+[http://www.0008888.com/jixie008/004.htm 控制系统]
+[http://www.0008888.com/jixie008/005.htm 分水器]
+[http://www.0008888.com/jixie008/006.htm 分条刀具]
+[http://www.0008888.com/jixie008/007.htm 分条复卷设备]
+[http://www.0008888.com/jixie008/008.htm 分条机]
+[http://www.0008888.com/jixie008/009.htm 分条整经机]
+[http://www.0008888.com/jixie008/010.htm 分线盒]
+[http://www.0008888.com/jixie008/011.htm 分线机]
+[http://www.0008888.com/jixie008/012.htm 分线设备]
+[http://www.0008888.com/jixie008/013.htm 分线箱]
+[http://www.0008888.com/jixie008/014.htm 分相可逆爪极永磁同步电机]
+[http://www.0008888.com/jixie008/015.htm 分支分配器]
+[http://www.0008888.com/jixie008/016.htm 分纸压线机]
+[http://www.0008888.com/jixie008/017.htm 分子筛灌装机]
+[http://www.0008888.com/jixie008/018.htm 酚醛覆膜木胶合板]
+[http://www.0008888.com/jixie008/019.htm 焚化装置]
+[http://www.0008888.com/jixie008/020.htm 焚烧炉]
+[http://www.0008888.com/jixie008/021.htm 焚烧设备]
+[http://www.0008888.com/jixie008/022.htm 粉笔机]
+[http://www.0008888.com/jixie008/023.htm 粉粒包装机]
+[http://www.0008888.com/jixie008/024.htm 粉料包装机]
+[http://www.0008888.com/jixie008/025.htm 粉煤灰]
+[http://www.0008888.com/jixie008/026.htm 粉煤灰混凝土砌块成型机]
+[http://www.0008888.com/jixie008/027.htm 粉磨设备]
+[http://www.0008888.com/jixie008/028.htm 粉末涂料]
+[http://www.0008888.com/jixie008/029.htm 粉末涂料前处理设备]
+[http://www.0008888.com/jixie008/030.htm 粉末涂料设备]
+[http://www.0008888.com/jixie008/031.htm 粉末涂料制粉设备]
+[http://www.0008888.com/jixie008/032.htm 粉末冶金]
+[http://www.0008888.com/jixie008/033.htm 粉末冶金合油轴]
+[http://www.0008888.com/jixie008/034.htm 粉末冶金机械]
+[http://www.0008888.com/jixie008/035.htm 粉末冶金机械零件]
+[http://www.0008888.com/jixie008/036.htm 粉碎机]
+[http://www.0008888.com/jixie008/037.htm 粉碎机械]
+[http://www.0008888.com/jixie008/038.htm 粉碎淋灰机]
+[http://www.0008888.com/jixie008/039.htm 粉碎设备]
+[http://www.0008888.com/jixie008/040.htm 粉体包装机械设备]
+[http://www.0008888.com/jixie008/041.htm 粉液体静电涂装生产线]
+[http://www.0008888.com/jixie008/042.htm 风棒]
+[http://www.0008888.com/jixie008/043.htm 风采燃烧器]
+[http://www.0008888.com/jixie008/044.htm 风洞噪声控制]
+[http://www.0008888.com/jixie008/045.htm 风机]
+[http://www.0008888.com/jixie008/046.htm 风机电机]
+[http://www.0008888.com/jixie008/047.htm 风机盘管]
+[http://www.0008888.com/jixie008/048.htm 风机通风机]
+[http://www.0008888.com/jixie008/049.htm 风机相关消音器]
+[http://www.0008888.com/jixie008/050.htm 风冷柴油机]
+[http://www.0008888.com/jixie008/051.htm 风力发电机]
+[http://www.0008888.com/jixie008/052.htm 风力发电设备]
+[http://www.0008888.com/jixie008/053.htm 风力灭火机]
+[http://www.0008888.com/jixie008/054.htm 风量调节阀]
+[http://www.0008888.com/jixie008/055.htm 风淋室]
+[http://www.0008888.com/jixie008/056.htm 风淋隧道]
+[http://www.0008888.com/jixie008/057.htm 风扇电机]
+[http://www.0008888.com/jixie008/058.htm 风水神奇石球]
+[http://www.0008888.com/jixie008/059.htm 封包机]
+[http://www.0008888.com/jixie008/060.htm 封包机电机]
+[http://www.0008888.com/jixie008/061.htm 封边机]
+[http://www.0008888.com/jixie008/062.htm 封环]
+[http://www.0008888.com/jixie008/063.htm 封口包装机]
+[http://www.0008888.com/jixie008/064.htm 封口机]
+[http://www.0008888.com/jixie008/065.htm 封切机]
+[http://www.0008888.com/jixie008/066.htm 封条机]
+[http://www.0008888.com/jixie008/067.htm 封头]
+[http://www.0008888.com/jixie008/068.htm 封尾机]
+[http://www.0008888.com/jixie008/069.htm 封箱]
+[http://www.0008888.com/jixie008/070.htm 封箱机]
+[http://www.0008888.com/jixie008/071.htm 锋鸣器]
+[http://www.0008888.com/jixie008/072.htm 线绕滤芯]
+[http://www.0008888.com/jixie008/073.htm 线绕滤芯制造机械]
+[http://www.0008888.com/jixie008/074.htm 蜂鸣器]
+[http://www.0008888.com/jixie008/075.htm 蜂窝煤机]
+[http://www.0008888.com/jixie008/076.htm 蜂窝纸板]
+[http://www.0008888.com/jixie008/077.htm 蜂窝纸板设备]
+[http://www.0008888.com/jixie008/078.htm 蜂窝纸板生产设备]
+[http://www.0008888.com/jixie008/079.htm 蜂窝纸芯]
+[http://www.0008888.com/jixie008/080.htm 蜂窝纸芯设备]
+[http://www.0008888.com/jixie008/081.htm 蜂窝制品]
+[http://www.0008888.com/jixie008/082.htm 除湿机]
+[http://www.0008888.com/jixie008/083.htm 缝焊机]
+[http://www.0008888.com/jixie008/084.htm 缝合机]
+[http://www.0008888.com/jixie008/085.htm 缝合针]
+[http://www.0008888.com/jixie008/086.htm 缝盘机]
+[http://www.0008888.com/jixie008/087.htm 缝纫（制衣、针车）设备]
+[http://www.0008888.com/jixie008/088.htm 缝纫机电机]
+[http://www.0008888.com/jixie008/089.htm 缝纫机零件]
+[http://www.0008888.com/jixie008/090.htm 缝纫设备]
+[http://www.0008888.com/jixie008/091.htm 服饰扣]
+[http://www.0008888.com/jixie008/092.htm 服装复合机械]
+[http://www.0008888.com/jixie008/093.htm 服装机械]
+[http://www.0008888.com/jixie008/094.htm 服装鞋帽电脑样版切割机]
+[http://www.0008888.com/jixie008/095.htm 服装压花机械]
+[http://www.0008888.com/jixie008/096.htm 氟合金泵]
+[http://www.0008888.com/jixie008/097.htm 氟化锂]
+[http://www.0008888.com/jixie008/098.htm 氟利昂制冷热交换器]
+[http://www.0008888.com/jixie008/099.htm 氟塑料衬里泵]
+[http://www.0008888.com/jixie008/100.htm 氟塑料衬里阀]
+[http://www.0008888.com/jixie008/101.htm 氟塑料衬里阀门]
+[http://www.0008888.com/jixie008/102.htm 氟塑料衬里管]
+[http://www.0008888.com/jixie008/103.htm 氟塑料衬里管道]
+[http://www.0008888.com/jixie008/104.htm 氟塑料磁力泵]
+[http://www.0008888.com/jixie008/105.htm 氟塑料合金泵]
+[http://www.0008888.com/jixie008/106.htm 氟塑料合金喷涂]
+[http://www.0008888.com/jixie008/107.htm 氟塑料合金液下泵]
+[http://www.0008888.com/jixie008/108.htm 浮球]
+[http://www.0008888.com/jixie008/109.htm 辐射交联电力电缆]
+[http://www.0008888.com/jixie008/110.htm 辐射交联聚乙烯热收缩带]
+[http://www.0008888.com/jixie008/111.htm 辐照交联电线电缆]
+[http://www.0008888.com/jixie008/112.htm 釜类]
+[http://www.0008888.com/jixie008/113.htm 辅机设备]
+[http://www.0008888.com/jixie008/114.htm 辅助元件]
+[http://www.0008888.com/jixie008/115.htm 付费电话IC卡]
+[http://www.0008888.com/jixie008/116.htm 付费率]
+[http://www.0008888.com/jixie008/117.htm 负压吸引空气净化工程]
+[http://www.0008888.com/jixie008/118.htm 平板振动器]
+[http://www.0008888.com/jixie008/119.htm 复板机] 
+[http://www.0008888.com/jixie008/120.htm 复点机]
+[http://www.0008888.com/jixie008/121.htm 复合]
+[http://www.0008888.com/jixie008/122.htm 复合材料]
+[http://www.0008888.com/jixie008/123.htm 复合侧板]
+[http://www.0008888.com/jixie008/124.htm 复合肥机械]
+[http://www.0008888.com/jixie008/125.htm 复合肥造粒成套设备]
+[http://www.0008888.com/jixie008/126.htm 复合肥造粒机]
+[http://www.0008888.com/jixie008/127.htm 复合干燥器]
+[http://www.0008888.com/jixie008/128.htm 复合钢]
+[http://www.0008888.com/jixie008/129.htm 复合管道]
+[http://www.0008888.com/jixie008/130.htm 复合硅酸盐保温材料]
+[http://www.0008888.com/jixie008/131.htm 复合机]
+[http://www.0008888.com/jixie008/132.htm 复合机械]
+[http://www.0008888.com/jixie008/133.htm 复合膜全自动包装机]
+[http://www.0008888.com/jixie008/134.htm 复合片]
+[http://www.0008888.com/jixie008/135.htm 复合软包装印刷机]
+[http://www.0008888.com/jixie008/136.htm 复合双色片材机组]
+[http://www.0008888.com/jixie008/137.htm 复合塔板]
+[http://www.0008888.com/jixie008/138.htm 复合橡胶板]
+[http://www.0008888.com/jixie008/139.htm 复合印刷里的印刷油墨]
+[http://www.0008888.com/jixie008/140.htm 复合纸罐生产线设备]
+[http://www.0008888.com/jixie008/141.htm 复合制薄膜袋设备]
+[http://www.0008888.com/jixie008/142.htm 复合制袋分切机]
+[http://www.0008888.com/jixie008/143.htm 复混肥机械]
+[http://www.0008888.com/jixie008/144.htm 复卷机]
+[http://www.0008888.com/jixie008/145.htm 复面机]
+[http://www.0008888.com/jixie008/146.htm 复膜机]
+[http://www.0008888.com/jixie008/147.htm 复片灯]
+[http://www.0008888.com/jixie008/148.htm 复印机]
+[http://www.0008888.com/jixie008/149.htm 复印机齿轮]
+[http://www.0008888.com/jixie008/150.htm 复印机搓纸轮]
+[http://www.0008888.com/jixie008/151.htm 复印机灯管]
+[http://www.0008888.com/jixie008/152.htm 复印机分离爪]
+[http://www.0008888.com/jixie008/153.htm 复印机刮板]
+[http://www.0008888.com/jixie008/154.htm 复印机耗材]
+[http://www.0008888.com/jixie008/155.htm 复印机上辊]
+[http://www.0008888.com/jixie008/156.htm 复印机下辊]
+[http://www.0008888.com/jixie008/157.htm 复用器]
+[http://www.0008888.com/jixie008/158.htm 富士貼片机]
+[http://www.0008888.com/jixie008/159.htm 富氧水充氧机]
+[http://www.0008888.com/jixie008/160.htm 覆铜箔板]
+[http://www.0008888.com/jixie008/161.htm 改性PVC淋水填料]
+[http://www.0008888.com/jixie008/162.htm 改性沥青]
+[http://www.0008888.com/jixie008/163.htm 换热器]
+[http://www.0008888.com/jixie008/164.htm 钙塑瓦楞机组]
+[http://www.0008888.com/jixie008/165.htm 盖铁]
+[http://www.0008888.com/jixie008/166.htm 干粉灌充机]
+[http://www.0008888.com/jixie008/167.htm 干酪素]
+[http://www.0008888.com/jixie008/168.htm 变压器节能变压器]
+[http://www.0008888.com/jixie008/169.htm 复合机]
+[http://www.0008888.com/jixie008/170.htm 复膜机]
+[http://www.0008888.com/jixie008/171.htm 干洗机]
+[http://www.0008888.com/jixie008/172.htm 干线传输]
+[http://www.0008888.com/jixie008/173.htm 干线传输设备]
+[http://www.0008888.com/jixie008/174.htm 干燥过滤器]
+[http://www.0008888.com/jixie008/175.htm 干燥机]
+[http://www.0008888.com/jixie008/176.htm 干燥机专用辅助设备]
+[http://www.0008888.com/jixie008/177.htm 干燥架]
+[http://www.0008888.com/jixie008/178.htm 干燥器]
+[http://www.0008888.com/jixie008/179.htm 干燥设备]
+[http://www.0008888.com/jixie008/180.htm 干燥设备机]
+[http://www.0008888.com/jixie008/181.htm 干燥箱]
+[http://www.0008888.com/jixie008/182.htm 干燥制粒设备]
+[http://www.0008888.com/jixie008/183.htm 干燥装置]
+[http://www.0008888.com/jixie008/184.htm 肝病治疗仪]
+[http://www.0008888.com/jixie008/185.htm 坩埚电阻炉]
+[http://www.0008888.com/jixie008/186.htm 感光材料]
+[http://www.0008888.com/jixie008/187.htm 感温]
+[http://www.0008888.com/jixie008/188.htm 感温探头]
+[http://www.0008888.com/jixie008/189.htm 感应]
+[http://www.0008888.com/jixie008/190.htm 感应淬火]
+[http://www.0008888.com/jixie008/191.htm 感应电机]
+[http://www.0008888.com/jixie008/192.htm 感应加热]
+[http://www.0008888.com/jixie008/193.htm 感应加热成套设备]
+[http://www.0008888.com/jixie008/194.htm 感应加热电源]
+[http://www.0008888.com/jixie008/195.htm 感应卡停车计时器]
+[http://www.0008888.com/jixie008/196.htm 感应熔炼]
+[http://www.0008888.com/jixie008/197.htm IC卡停车场收费系统]
+[http://www.0008888.com/jixie008/198.htm 感应透热]
+[http://www.0008888.com/jixie008/199.htm 刚结构]
+[http://www.0008888.com/jixie008/200.htm 刚平板]
+[http://www.0008888.com/jixie008/201.htm 缸套]
+[http://www.0008888.com/jixie008/202.htm 钢板裁剪]
+[http://www.0008888.com/jixie008/203.htm 钢板弹簧]
+[http://www.0008888.com/jixie008/204.htm 钢板壳电机]
+[http://www.0008888.com/jixie008/205.htm 钢板网]
+[http://www.0008888.com/jixie008/206.htm 钢叉]
+[http://www.0008888.com/jixie008/207.htm 钢齿轮]
+[http://www.0008888.com/jixie008/208.htm 钢带]
+[http://www.0008888.com/jixie008/209.htm 钢带包装]
+[http://www.0008888.com/jixie008/210.htm 钢钉机]
+[http://www.0008888.com/jixie008/211.htm 钢镐]
+[http://www.0008888.com/jixie008/212.htm 钢格板]
+[http://www.0008888.com/jixie008/213.htm 钢骨架塑料复合管] 
+[http://www.0008888.com/jixie008/214.htm 钢管]
+[http://www.0008888.com/jixie008/215.htm 钢管加热器]
+[http://www.0008888.com/jixie008/216.htm 钢管铁塔]
+[http://www.0008888.com/jixie008/217.htm 钢管组合阀]
+[http://www.0008888.com/jixie008/218.htm 钢角尺]
+[http://www.0008888.com/jixie008/219.htm 钢结构]
+[http://www.0008888.com/jixie008/220.htm 钢结构标准厂房]
+[http://www.0008888.com/jixie008/221.htm 钢结构件]
+[http://www.0008888.com/jixie008/222.htm 钢结构行业专机]
+[http://www.0008888.com/jixie008/223.htm 钢筋调直切断机]
+[http://www.0008888.com/jixie008/224.htm 钢筋机械设备]
+[http://www.0008888.com/jixie008/225.htm 钢筋切断机]
+[http://www.0008888.com/jixie008/226.htm 钢筋弯曲机]
+[http://www.0008888.com/jixie008/227.htm 钢缆]
+[http://www.0008888.com/jixie008/228.htm 钢棉]
+[http://www.0008888.com/jixie008/229.htm 脚手架]
+[http://www.0008888.com/jixie008/230.htm 钢模板修复机]
+[http://www.0008888.com/jixie008/231.htm 钢瓶]
+[http://www.0008888.com/jixie008/232.htm 钢瓶除锈设备]
+[http://www.0008888.com/jixie008/233.htm 钢球]
+[http://www.0008888.com/jixie008/234.htm 钢砂]
+[http://www.0008888.com/jixie008/235.htm 钢丝]
+[http://www.0008888.com/jixie008/236.htm 钢丝轮]
+[http://www.0008888.com/jixie008/237.htm 钢丝轮刷]
+[http://www.0008888.com/jixie008/238.htm 钢丝螺套]
+[http://www.0008888.com/jixie008/239.htm 钢丝圈]
+[http://www.0008888.com/jixie008/240.htm 钢丝圈以]
+[http://www.0008888.com/jixie008/241.htm 钢丝绳]
+[http://www.0008888.com/jixie008/242.htm 钢丝绳吊索具]
+[http://www.0008888.com/jixie008/243.htm 钢丝绳索的]
+[http://www.0008888.com/jixie008/244.htm 钢丝刷]
+[http://www.0008888.com/jixie008/245.htm 钢丝校直机]
+[http://www.0008888.com/jixie008/246.htm 钢塑复合]
+[http://www.0008888.com/jixie008/247.htm 钢塑复合管] 
+[http://www.0008888.com/jixie008/248.htm 钢铁加工设备企]
+[http://www.0008888.com/jixie008/249.htm 钢桶]
+[http://www.0008888.com/jixie008/250.htm 钢丸]
+[http://www.0008888.com/jixie008/251.htm 钢丸磨料]
+[http://www.0008888.com/jixie008/252.htm 钢纤维]
+[http://www.0008888.com/jixie008/253.htm 钢印]
+[http://www.0008888.com/jixie008/254.htm 钢印标牌]
+[http://www.0008888.com/jixie008/255.htm 钢制法兰盘]
+[http://www.0008888.com/jixie008/256.htm 货运集装箱]
+[http://www.0008888.com/jixie008/257.htm 钢制教学设备]
+[http://www.0008888.com/jixie008/258.htm 钢质焊接气瓶]
+[http://www.0008888.com/jixie008/259.htm 钢质无缝气瓶]
+[http://www.0008888.com/jixie008/260.htm 钢字]
+[http://www.0008888.com/jixie008/261.htm 港口机械]
+[http://www.0008888.com/jixie008/262.htm 紧索具]
+[http://www.0008888.com/jixie008/263.htm 高/中压离心风机]
+[http://www.0008888.com/jixie008/264.htm 高保真立体声耳机]
+[http://www.0008888.com/jixie008/265.htm 高比重合金]
+[http://www.0008888.com/jixie008/266.htm 高层建筑给水泵]
+[http://www.0008888.com/jixie008/267.htm 高纯硅砂]
+[http://www.0008888.com/jixie008/268.htm 高纯金属锂]
+[http://www.0008888.com/jixie008/269.htm 高弹联轴器]
+[http://www.0008888.com/jixie008/270.htm 高蛋白酪朊酸钠]
+[http://www.0008888.com/jixie008/271.htm 高档玻璃制品模具]
+[http://www.0008888.com/jixie008/272.htm 高档铝门窗]
+[http://www.0008888.com/jixie008/273.htm 高低速捏合机]
+[http://www.0008888.com/jixie008/274.htm 高低压成套电器设备]
+[http://www.0008888.com/jixie008/275.htm 高低压吹膜机组]
+[http://www.0008888.com/jixie008/276.htm 高低压电控设备]
+[http://www.0008888.com/jixie008/277.htm 高低压电器开关柜]
+[http://www.0008888.com/jixie008/278.htm 高电压电机的]
+[http://www.0008888.com/jixie008/279.htm 高发泡]
+[http://www.0008888.com/jixie008/280.htm 高分辨率显示管]
+[http://www.0008888.com/jixie008/281.htm 高功率激光加工成套设备]
+[http://www.0008888.com/jixie008/282.htm 高功率激光镜片]
+[http://www.0008888.com/jixie008/283.htm 高功率密度电热管]
+[http://www.0008888.com/jixie008/284.htm 高含醣消醣剂]
+[http://www.0008888.com/jixie008/285.htm 高回弹橡胶海绵]
+[http://www.0008888.com/jixie008/286.htm 高级两用护翼卫生巾生产线]
+[http://www.0008888.com/jixie008/287.htm 高剪切分散乳化机]
+[http://www.0008888.com/jixie008/288.htm 高解析喷码机] 
+[http://www.0008888.com/jixie008/289.htm 高精度4色水性印刷开槽机]
+[http://www.0008888.com/jixie008/290.htm 高精度金属筛网]
+[http://www.0008888.com/jixie008/291.htm 高精度空气/液体过滤器]
+[http://www.0008888.com/jixie008/292.htm 高精度螺旋齿轮减速电机] 
+[http://www.0008888.com/jixie008/293.htm 高精度梯带]
+[http://www.0008888.com/jixie008/294.htm 高精度瓦楞辊]
+[http://www.0008888.com/jixie008/295.htm 高精度卫生阀门管件]
+[http://www.0008888.com/jixie008/296.htm 高精度卫星平衡机]
+[http://www.0008888.com/jixie008/297.htm 高精度稳流电源]
+[http://www.0008888.com/jixie008/298.htm 高精度延迟器]
+[http://www.0008888.com/jixie008/299.htm 高精度自动液压机床]
+[http://www.0008888.com/jixie008/300.htm 高精密度塑胶件]
+[http://www.0008888.com/jixie008/301.htm 高空障碍警示灯]
+[http://www.0008888.com/jixie008/302.htm 高空作业车]
+[http://www.0008888.com/jixie008/303.htm 高楼给水泵]
+[http://www.0008888.com/jixie008/304.htm 高楼衡压供水成套机组]
+[http://www.0008888.com/jixie008/305.htm 高频淬火设备]
+[http://www.0008888.com/jixie008/306.htm 高频电磁振动筛]
+[http://www.0008888.com/jixie008/307.htm 高频电刀]
+[http://www.0008888.com/jixie008/308.htm 高频电疗仪]
+[http://www.0008888.com/jixie008/309.htm 高频电源]
+[http://www.0008888.com/jixie008/310.htm 高频电子]
+[http://www.0008888.com/jixie008/311.htm 高频电子水处理器]
+[http://www.0008888.com/jixie008/312.htm 高频感应加热设备]
+[http://www.0008888.com/jixie008/313.htm 高频焊管]
+[http://www.0008888.com/jixie008/314.htm 高频机]
+[http://www.0008888.com/jixie008/315.htm 高频加热设备]
+[http://www.0008888.com/jixie008/316.htm 高频聚四氟乙烯绝缘子]
+[http://www.0008888.com/jixie008/317.htm 高频热合机]
+[http://www.0008888.com/jixie008/318.htm 高频塑胶熔接机]
+[http://www.0008888.com/jixie008/319.htm 高频塑料热合机]
