--- a/wiki/%E3%82%84.wikitext
+++ b/wiki/%E3%82%84.wikitext
@@ -26,3 +26,8 @@ For a list of words starting with this hiragana see: [[Wiktionary:Japanese index
 # Variation on the Japanese [[copula]] だ ("da"), associated with the [[w:Kansai|Kansai region]] and particularly [[w:Osaka|Osaka]]. The use of や is common in fictional dialogue attributed to characters from Osaka.
 #*[[まあ]]、[[ぼちぼち]]<u>や</u>[[な|なあ]]。<br>''Maa, bochibochi <u>ya</u> naa.''<br>Well, things <u>are</u> slow. ''(A stereotypical Osaka expression)''
 #*[[やん]] is the negative form of や.
+
+===Suffix===
+'''や''' ([[屋]], -ya)
+
+# [[shop]]/[[store]]
