--- a/wiki/mammoth.wikitext
+++ b/wiki/mammoth.wikitext
@@ -1,4 +1,11 @@
+==English==
 === Noun ===
 
-# Large, hairy, extinct elephant-like mammal.
+# Large, hairy, extinct [[elephant]]-like mammal.
 # Something very large.
+
+===Translations===
+*Chinese: [[猛犸]]
+*French: [[mammouth]]
+*Italian: [[mammut]]
+*Japanese: [[マンモス]]
