--- a/wiki/glass.wikitext
+++ b/wiki/glass.wikitext
@@ -22,7 +22,7 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 *French: [[verre]] ''m''
 *German: Glas [[:de:Glas|(de)]] ''n''
 * {{ga}}: [[gloine]] ''f4''
-*Hebrew: [[זכוכית]] ''f''
+*Hebrew: [[:he:זכוכית|זכוכית]] /zhuhit/ ''f''
 *Italian: [[vetro]] ''m''
 *Japanese: [[ガラス]] (garasu, [[硝子]])
 *Polish: [[szkło]] ''n''
@@ -32,9 +32,10 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 {|
 *Portuguese: [[vidro]] ''m''
 *Romanian: [[sticlă]] ''f''
+*Russian: [[:ru:стекло|стекло]] /steklo/
 *Slovak: [[sklo#Slovak|sklo]] ''n''
 *Spanish: [[vidrio]] ''m''
-*Swedish: [[glas]] ''n''
+*Swedish: [[:sv:glas|glas]] ''n''
 *[[Tagalog]]: [[salamin]] ''n''
 |}
 |}
@@ -49,7 +50,7 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 *French: verre [[:fr:verre|(fr)]] ''m''
 *German: Glas [[:de:Glas|(de)]] ''n''
 *{{ga}}: [[gloine]] ''f4''
-*Hebrew: [[כוס]] ''f''
+*Hebrew: [[:he:כוס|כוס]] /kos/ ''f''
 *Italian: [[bicchiere]] ''m''
 *Japanese: [[グラス]] (gurasu)
 *Polish: [[szklanka]] ''f'', [[kieliszek]] ''m'' (''for alcoholic drinks'')
@@ -59,6 +60,7 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 {|
 *Portuguese: [[copo]] ''m''
 *Romanian: [[pahar]] ''n''
+*Russian: [[:ru:стакан|стакан]] /stakan/ ''m''
 *Slovak: [[pohár#Slovak|pohár]] ''m''
 *Spanish: vaso [[:es:vaso|(es)]] ''m''
 *Swedish: [[glas]] ''n''
@@ -110,3 +112,6 @@ The translations below need to be checked by native speakers and then inserted i
 '''glass'''
 
 #[[ice cream]]
+
+==[[multilingual associations]]==
+*[[Russian]]: '''glass''' попало /popalo/ [[:ru:в|в]] [[:ru:глаз|глаз]] /v glaz/ ([[in]] [[eye]])
