--- a/wiki/serendipity.wikitext
+++ b/wiki/serendipity.wikitext
@@ -1,3 +1,3 @@
 '''Serendipity''' (noun)
-
-#Making discoveries by accident. For example, finding a biological culture "ruined" by mould, and discovering the antibiotic penicillin as a consequence.
+-Noun-
+#Discovering something by accident while investigating something quite different. For example, finding a biological culture "ruined" by mould, and discovering the antibiotic penicillin as a consequence.
