--- a/wiki/aspirate.wikitext
+++ b/wiki/aspirate.wikitext
@@ -1,11 +1,11 @@
 ==English==
 ===Pronunciation===
 ====Noun====
-*[[IPA]]: 'æːs.pə.rɪt
-*[[SAMPA]]: "{:s.p@.rIt
+*[[IPA]]: /'æs.p(ə).rɪt/
+*[[SAMPA]]: /"{s.p(@).rIt/
 ====Verb====
-*[[IPA]]: 'æːs.pə.ret
-*[[SAMPA]]: "{:s.p@.ret
+*[[IPA]]: /'æs.pə.reɪt/
+*[[SAMPA]]: /"{s.p@.reIt/
 
 ===Etymology===
 From L. ''spiritus asper'', lit. '[[rough]] [[breath]],' from ''asper'' '[[rough]]' + ''apiritus''.
