--- a/wiki/serendipity.wikitext
+++ b/wiki/serendipity.wikitext
@@ -1,3 +1,13 @@
-'''Serendipity''' (noun)
--Noun-
+==English==
+
+=== Noun ===
+'''Serendipity'''
 #Discovering something by accident while investigating something quite different. For example, finding a biological culture "ruined" by mould, and discovering the antibiotic penicillin as a consequence.
+
+=== Adjective ===
+'''Serendipitous'''
+#By serendipity.
+
+=== Adverb ===
+'''Serendipitously'''
+#By serendipity.
