/* Proper noun */ <Wiktionary#2234592>

--- a/wiki/Wiktionary.wikitext
+++ b/wiki/Wiktionary.wikitext
@@ -11,7 +11,7 @@ From the [[Hawaiian]] [[pidgin]] word '''[[wiki]]''', from English '''[[quick]]'
 '''Wiktionary'''
 
 # A collaborative project to produce a [[free]] and complete [[dictionary]] and [[thesaurus]] in every [[language]].
-
+# The [[dictionary]] produced by the [[Wiktionary]] project
 ==== Translations ====
 *Chinese: [[維基字典]]
 *Danish: [[Wikiordbog]] ''m''
