--- a/wiki/who.wikitext
+++ b/wiki/who.wikitext
@@ -11,6 +11,9 @@
 #the person or people that (used as a [[relative pronoun]])
 #:''It was a nice man who helped us.''
 
+===Noun===
+'''WHO'''
+World Health Organisation. Pronounced as initials (W.H.O.), not as an acronym ('who')
 
 ====Translations====
 *[[Balinese]]: [[nyen]]
