fmt; moved "very large" to adj; +genders to fr: & it:; syns; Wikipedia link <mammoth#64830>

--- a/wiki/mammoth.wikitext
+++ b/wiki/mammoth.wikitext
@@ -1,11 +1,23 @@
 ==English==
 === Noun ===
+'''mammoth''' (''plural'' '''mammoths''')
 
-# Large, hairy, extinct [[elephant]]-like mammal.
-# Something very large.
+#A large, hairy, extinct [[elephant]]-like mammal.
 
-===Translations===
+====Translations====
+
 *Chinese: [[猛犸]]
-*French: [[mammouth]]
-*Italian: [[mammut]]
+*French: [[mammouth]] ''m''
+*Italian: [[mammut]] ''m''
 *Japanese: [[マンモス]]
+
+===Adjective===
+'''mammoth''' (''[[comparative]]'' '''more mammoth''', ''[[superlative]]'' '''most mammoth''')
+
+#Very large.
+
+====Synonyms====
+*[[colossal]], [[enormous]], [[gigantic]], [[huge]], [[titanic]]
+
+===See also===
+*[[w:mammoth|Wikipedia article on the mammoth]]
