/* Etymology */ - deleted "Cockney" - can't be sure of this <tater#54301>

--- a/wiki/tater.wikitext
+++ b/wiki/tater.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ====Etymology====
-Representing an [[aphetic]] [[Cockney]] pronunciation of '''[[potato]]'''
+Representing an [[aphetic]] pronunciation of '''[[potato]]'''
 
 ===Noun===
 '''tater''' (''plural'' '''[[taters]]''')
