--- a/wiki/addendum.wikitext
+++ b/wiki/addendum.wikitext
@@ -1,13 +1,11 @@
 ==English==
-
 ===Etymology===
-Latin, from ''addere'' to add.
+Latin, from ''[[addere]]'', to add.
 
 ===Noun===
-Plural: [[Addenda]]
+'''addendum''' (''plural'' '''[[addenda]]''')
 
 #A thing to be [[add]]ed; an [[appendix]] or [[addition]].
-
 
 ----
 {{webster}}
