fmt; moved Nazi def to proper n; separated rel & der <holocaust#64412>

--- a/wiki/holocaust.wikitext
+++ b/wiki/holocaust.wikitext
@@ -1,26 +1,28 @@
 ==English==
-
 ===Etymology===
 Greek ''holo'' (all) + ''caust'' (burn) <!-- Please clean up -->
 
 ===Noun===
-'''holocaust'''
+'''holocaust''' (''plural'' '''holocausts''')
 
-# A [[sacrifice]] which is completely burned to ashes.
-# The mass murder of [[Jew]]s by the [[Nazi]] regime during [[World War II]].
-# The state-sponsored mass murder of an ethnic group.
+#A [[sacrifice]] that is completely burned to ashes.
+#The state-sponsored mass murder of an ethnic group (see also the proper noun below).
 
-===Related Terms===
-*[[caustic]]
-*[[holo-]]
+===Proper noun===
+'''the Holocaust'''
+
+#The mass murder of [[Jew]]s by the [[Nazi]] regime during [[World War II]].
+
+===Derived terms===
 *[[holocaust denier]]
 
-===See Also===
+===Related terms===
+*[[caustic]]
+*[[holo-]]
+
+===See also===
 *[[burnt offering]]
 *[[concentration camp]]
 *[[Final Solution]]
 *[[genocide]]
-*[[Jew]]
 *[[mass murder]]
-*[[Nazi]]
-*[[World War II]]
