fmt; deleted repeated def (shut with force); marked bridge as vi <slam#62605>

--- a/wiki/slam.wikitext
+++ b/wiki/slam.wikitext
@@ -1,30 +1,29 @@
 ==English==
-
 ===Noun===
+'''slam''' (''[[countable]] and [[uncountable]]''; ''plural'' '''slams''')
 
-'''slam'''
+#(''countable'') An act of slamming.
+#(''countable'') The shock and noise produced by slamming.
+#(''countable'') (''basketball'') A [[slam dunk]].
+#(''countable'') (''bridge'') A bid of six (''[[small slam]]'') or seven (''[[grand slam]]'') in a suit or no trump.
+#(''countable'') (''colloquial'') An insult.
+#:''I don't mean this as a slam, but you can be really impatient sometimes.''
+#(''uncountable'') The refuse of alum works.
 
-# An act of slamming.
-# The shock and noise produced in slamming.
-#(''basketball'') A [[slam dunk]].
-#(''bridge'') A bid of six (''[[small slam]]'') or seven (''[[grand slam]]'') in a suit or no trump.
-# (''colloquial'') An insult.
-#: ''I don't mean this as a slam, but you can be really impatient sometimes.''
-# The refuse of alum works.
+===Transitive verb===
+'''to slam''' ('''slamming''', '''slammed''', '''slammed''')
 
-===Verb===
+#To shut with sudden force so as to produce a shock and noise.
+#:''Don't slam the door!''
+#To put in or on a particular place with force and loud noise.  (Often followed by a preposition such as ''down'', ''against'' or ''into.)
+#:''Don't slam that trunk down on the pavement!''
+#To strike forcefully with some implement.
+#(''card games'') To defeat by winning all the tricks of a deal or a hand.
+#(''colloquial'') To speak badly of.
+#:''Don't ever slam me in front of the boss like that again!''
+#(''basketball'') To dunk forcefully.
 
-'''to slam'''
+===Intransitive verb===
+'''to slam''' ('''slamming''', '''slammed''', '''slammed''')
 
-# To shut with force and a loud noise.
-#: ''He slammed the door.''
-# To put in or on some place with force and loud noise. Often used with ''down''.
-#: ''Don't slam that trunk down on the pavement!''
-# To shut with sudden force so as to produce a shock and noise.
-#: ''Don't slam the door!''
-# To strike forcefully with some implement.
-# (''card games'') To defeat by winning all the tricks of a deal or a hand.
-# (''bridge'') To make a slam bid.
-# (''basketball'') To dunk forcefully.
-# (''colloquial'') To speak badly of.
-#: ''Don't ever slam me in front of the boss like that again!''
+#(''bridge'') To make a slam bid.
