--- a/wiki/-in%27.wikitext
+++ b/wiki/-in%27.wikitext
@@ -1,21 +1,17 @@
 ==English==
 ===Etymology===
-Short form of [[-ing]].
+Representation of a pronunciation of [[-ing]] with the /ŋ/ replaced by /n/.
 
 ===Suffix===
 '''-in''''
 
-# (''informal, slang'') Used to form [[present participle]]s of [[verb]]s.
+# (''slang'') Used to form [[present participle]]s of [[verb]]s.
 #:''makin''' (as in ''You are makin' a mess.'')
-# (''informal, slang'') Used to form [[verbal noun]]s from verbs.
+# (''slang'') Used to form [[verbal noun]]s from verbs.
 #:''makin''' (as in ''The makin' of the film.'')
 
 ====Translations====
-''The translations below are a guide only.  See individual words for precise translations.''
-
-*French: (1): [[-ant#French|-ant]]
-*Interlingua: (1): [[-ante#Interlingua|-ante]], [[-ente#Interlingua|-ente]], [[-iente#Interlingua|-iente]]; (2): [[-ion#Interlingua|-ion]], [[-mento#Interlingua|-mento]], [[-ar#Interlingua|-ar]], [[-er#Interlingua|-er]], [[-ir#Interlingua|-ir]]
-*Italian: (1): [[-ando#Italian|-ando]] (''for verbs ending in [[-are#Italian|-are]]''), [[-endo#Italian|-endo]] (''for verbs ending in [[-ere#Italian|-ere]] or [[-ire#Italian|-ire]]''), [[-ucendo#Italian|-ucendo]] (''for verbs ending in [[-urre#Italian|-urre]]'')
+''See [[-ing]]''
 
 ===See also===
 *[[-ed]]
