--- a/wiki/woofer.wikitext
+++ b/wiki/woofer.wikitext
@@ -1,16 +1,20 @@
-==Etymology==
-From ''[[woof]]'', sound a dog makes, + agent suffix ''[[-er]]''
+==English==
+===Etymology===
+''[[woof]]'', the sound a dog makes, + agent suffix ''[[-er]]''
 
 ==English==
 ===Noun===
-'''woofer'''; plural '''[[woofers]]'''
-# electronic [[speaker]] that produces low [[frequency]] sound
+'''woofer''' (''plural'' '''[[woofers]]''')
+
+#An electronic [[speaker]] that produces low-[[frequency]] sound.
 
 ====Translations====
-*{{msg:fi}}: [[bassokaiutin]]
+*Finnish: [[bassokaiutin]]
 
-===Related Terms===
+===Related terms===
+*[[woof]]
+
+===See also===
 *[[midrange]]
 *[[squawker]]
 *[[tweeter]]
-*[[woof]]
