--- a/wiki/%E5%B1%8B.wikitext
+++ b/wiki/%E5%B1%8B.wikitext
@@ -39,6 +39,11 @@
 ** '''[[On]]''': [[おく]] (oku)  <  [[をく]] (woku)
 ** '''[[Kun]]''': [[や]] (ya), [[やね]] (yane)
 
+* '''Compounds''':
+** [[本屋]] (ほんや, honya): [[bookshop]]
+** [[松屋]] (まつや, matsuya): [[department store]]
+** [[紀伊國屋]] (きのくにや, kinokuniya)
+
 * '''Other info''':  
 
 ----
