--- a/wiki/wretched.wikitext
+++ b/wiki/wretched.wikitext
@@ -6,4 +6,4 @@
 
 ==Quotes==
 * ''To what '''wretched''' state reserved!''  [[Milton]]
-* '''''Wretched''' ungratefulness'''. Sir Philip Sidney
+* '''''Wretched''' ungratefulness''. Sir Philip Sidney
